# elementary-cellular-automata

./: .gitignore  CMakeLists.txt  Makefile  README.md  compile  run
.cache/clangd/index/: SDL.h.F9615A003AC640B4.idx  SDL_assert.h.C77B3D494A577256.idx  SDL_atomic.h.2BAFB80B4072E5F5.idx  SDL_audio.h.43D9C151A11D631D.idx  SDL_blendmode.h.584221174AF82C29.idx  SDL_clipboard.h.E02F7E0061B1ED88.idx  SDL_config.h.B02E467F4AC79AEB.idx  SDL_config.h.E2439DE4FBFB63BA.idx  SDL_cpuinfo.h.45F2E30CBE244814.idx  SDL_endian.h.E8E4A3FBF7D2AE55.idx  SDL_error.h.85E01A0C14531989.idx  SDL_events.h.D7D6BE22F5BD029A.idx  SDL_filesystem.h.3B0DFDF408599CDB.idx  SDL_gamecontroller.h.AB2674EE2C2787E3.idx  SDL_gesture.h.DC713AF0EF44401A.idx  SDL_guid.h.9D64429186D5462D.idx  SDL_haptic.h.A046860B15A8F937.idx  SDL_hidapi.h.F1C4A222882EEB08.idx  SDL_hints.h.0EB9D2ED996B616D.idx  SDL_joystick.h.2A3E3F67A4AE5C13.idx  SDL_keyboard.h.C4D5B9F0A43060D7.idx  SDL_keycode.h.E12175CED2BDEF86.idx  SDL_loadso.h.A3CC436B86D9B4DE.idx  SDL_locale.h.75ACD14F05962F64.idx  SDL_log.h.CDA0E14422567B6D.idx  SDL_main.h.A7ED6FA89FC03A8D.idx  SDL_messagebox.h.6A4E49C27C52E162.idx  SDL_metal.h.B4EFF8A68881BE8E.idx  SDL_misc.h.BF49F491DC23E468.idx  SDL_mouse.h.89E48BD941D59B55.idx  SDL_mutex.h.BDC2BE706FC77C3F.idx  SDL_pixels.h.110591410F7E4432.idx  SDL_platform.h.E1D6EDC04E418286.idx  SDL_power.h.E8EC40CB364BC23F.idx  SDL_quit.h.F450B819F5AB34B5.idx  SDL_rect.h.F0B7C1DB018548CB.idx  SDL_render.h.509A03E97FC82341.idx  (+35 more)
include/: SDL_config.h  automata.h  renderer.h
src/: main.c  microui.c  renderer.c
(+13 files in other folders)
